<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Profesor">

    <ImageView
        android:id="@+id/imgProf"
        android:layout_width="123dp"
        android:layout_height="131dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="88dp"
        android:contentDescription="@string/imgProf"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/avatar" />

    <TextView
        android:id="@+id/textNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:text="@string/textNombre"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/imgProf"
        app:layout_constraintTop_toBottomOf="@+id/textProfesor" />

    <TextView
        android:id="@+id/textProfesion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:text="@string/textProfesion"
        android:textColor="@color/ABC2"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/imgProf"
        app:layout_constraintTop_toBottomOf="@+id/textNombre" />

    <TextView
        android:id="@+id/textNombreProfesion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/textNombreProfesion"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.145"
        app:layout_constraintStart_toEndOf="@+id/imgProf"
        app:layout_constraintTop_toBottomOf="@+id/textProfesion" />

    <TextView
        android:id="@+id/textProfesor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="100dp"
        android:text="@string/textOcupacion"
        android:textColor="@color/ABC2"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/imgProf"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textFecha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="28dp"
        android:text="@string/textFecha"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textReporteEstado" />

    <TextView
        android:id="@+id/textReporteEstado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="92dp"
        android:text="@string/textReporteEstado"
        android:textColor="@color/ABC2"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgProf" />

    <TextView
        android:id="@+id/textHora"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="28dp"
        android:text="@string/textHora"
        app:layout_constraintStart_toEndOf="@+id/textFecha"
        app:layout_constraintTop_toBottomOf="@+id/textReporteEstado" />

    <TextView
        android:id="@+id/textEstado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="20dp"
        android:background="@android:color/holo_green_dark"
        android:text="@string/textEstado"
        android:textColor="@android:color/background_light"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textResultado" />

    <TextView
        android:id="@+id/textResultado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="16dp"
        android:text="@string/textResultado"
        android:textColor="@color/ABC2"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textFecha" />

    <Button
        android:id="@+id/buttonCursos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="76dp"
        android:text="@string/buttonCursos"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textEstado" />

    <Button
        android:id="@+id/buttonEstudiantes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:text="@string/buttonEstudiantes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.398"
        app:layout_constraintStart_toEndOf="@+id/buttonCursos"
        app:layout_constraintTop_toBottomOf="@+id/textEstado" />

</android.support.constraint.ConstraintLayout>